# Nexus

./: .gitignore  .gitmodules  404.html  README-en.md  README.md  commands_export.txt  commands_simple.txt  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: deploy-pages.yml  main.yml  pages.yml
Command/: JSON Schema包.json  commands_list.txt  方块状态包.json  默认命令库.json
Nexus-Android/: settings.gradle.kts
Nexus-Android.bak/app/src/main/cpp/: CMakeLists.txt
Nexus-Android.bak/app/src/main/java/com/nexuscmd/: FloatingWindowService.kt  MainActivity.kt  MainViewModel.kt
Nexus-Android.bak/app/src/main/java/com/nexuscmd/data/: AddonManager.kt  ParticleLibrary.kt  SoundEffectLibrary.kt  TemplateGenerator.kt
Nexus-Android.bak/app/src/main/java/com/nexuscmd/ui/theme/: Color.kt  Theme.kt
Nexus-Android.bak/app/src/main/res/drawable/: floating_collapsed_bg.xml  floating_input_bg.xml
Nexus-Android/app/: build.gradle.kts  proguard-rules.pro
Nexus-Android/app/src/androidTest/java/com/nexuscmd/core/: AppContextInstrumentedTest.kt  CHelperCoreInstrumentedTest.kt
Nexus-Android/app/src/debug/kotlin/yancey/chelper/android/util/: MonitorUtil.kt
Nexus-Android/app/src/main/: AndroidManifest.xml
Nexus-Android/app/src/main/cpp/: CMakeLists.txt  native.cpp
Nexus-Android/app/src/main/java/com/nexuscmd/: CommandHelper.kt  FloatingWindowService.kt  MainActivity.kt  MainViewModel.kt
Nexus-Android/app/src/main/java/com/nexuscmd/android/: NexusApplication.kt
Nexus-Android/app/src/main/java/com/nexuscmd/android/activity/: BaseComposeActivity.kt  HomeActivity.kt
Nexus-Android/app/src/main/java/com/nexuscmd/android/service/: FloatingWindowService.kt  Old2NewIMEService.kt
Nexus-Android/app/src/main/java/com/nexuscmd/android/util/: PolicyGrantManager.kt
Nexus-Android/app/src/main/java/com/nexuscmd/android/widget/: CommandEditText.kt
Nexus-Android/app/src/main/java/com/nexuscmd/android/window/: ComposeLifecycleOwner.kt  FloatingWindowManager.kt  LoongFlowDraggableRule.kt  (+1 more)
Nexus-Android/app/src/main/java/com/nexuscmd/core/: ClickSuggestionResult.kt  NexusCore.kt  NexusErrorReason.kt  NexusSuggestion.kt  SelectedString.kt  Theme.kt
Nexus-Android/app/src/main/java/com/nexuscmd/data/: AddonManager.kt  AnimationLibrary.kt  BackgroundStore.kt  BlockLibrary.kt  CommandChainRepository.kt  CommandCompletionEnhancer.kt  CommandRepository.kt  CopyHistoryDataStore.kt  HistoryManager.kt  ItemLibrary.kt  LocalCommandLabDataStore.kt  MolangLibrary.kt  ParticleLibrary.kt  SettingsDataStore.kt  SettingsManager.kt  SoundEffectLibrary.kt  SoundPreviewPlayer.kt  TemplateGenerator.kt
Nexus-Android/app/src/main/java/com/nexuscmd/network/: ServiceManager.kt
Nexus-Android/app/src/main/java/com/nexuscmd/ui/: NavHost.kt
Nexus-Android/app/src/main/res/drawable/: completion_chip_bg.xml  floating_expanded_bg.xml
Nexus-Android/app/src/main/res/layout/: completion_chip.xml  floating_window.xml
Nexus-Android/app/src/main/res/values/: strings.xml
Nexus-Android/app/src/main/res/xml/: method.xml
Nexus-Android/app/src/test/java/com/nexuscmd/core/: NativeDataClassesTest.kt  SelectedStringTest.kt  ThemeTest.kt
Nexus-Android/app/src/test/java/com/nexuscmd/data/: SettingsDefaultsTest.kt  SettingsLegacyMigrationContractTest.kt
Nexus-Android/gradle/wrapper/: gradle-wrapper.properties
Nexus-Core/: .gitignore  CMakeLists.txt
Nexus-Core.bak/: CMakeLists.txt
Nexus-Core.bak/include/: completion.hpp  highlighter.hpp
Nexus-Core.bak/src/: command_helper_jni.cpp  completion.cpp  highlighter.cpp  parser.cpp  tokenizer.cpp
Nexus-Core/include/: command_helper_jni.hpp  command_registry.hpp  completion.hpp  parser.hpp  tokenizer.hpp  types.hpp
Nexus-Core/src/: command_helper_jni.cpp  command_registry.cpp  completion.cpp
Nexus-Core/src/apps/: CHelperAndroid.cpp  CHelperResourceGenerator.cpp  CHelperResourceGenerator.h  CHelperWeb.cpp
Nexus-Core/src/apps/qt/: CHelperQt.cpp  CHelperQt.h  chelper.qrc
Nexus-Core/src/chelper/: CHelperCore.cpp  CHelperCore.h
Nexus-Core/src/chelper/auto_suggestion/: AutoSuggestion.cpp  AutoSuggestion.h  Suggestion.cpp  Suggestion.h  Suggestions.cpp  Suggestions.h
Nexus-Core/src/chelper/command_structure/: CommandStructure.cpp  CommandStructure.h  StructureBuilder.cpp  StructureBuilder.h
Nexus-Core/src/chelper/lexer/: Lexer.cpp  Lexer.h  LexerResult.cpp  LexerResult.h  Token.cpp  Token.h  TokenReader.cpp  TokenReader.h
Nexus-Core/src/chelper/linter/: Linter.cpp  Linter.h
Nexus-Core/src/chelper/node/: CommandNode.cpp  CommandNode.h  NodeInitialization.cpp  NodeInitialization.h  NodeType.cpp  NodeType.h  NodeWithType.cpp  NodeWithType.h
Nexus-Core/src/chelper/old2new/: Old2New.cpp  Old2New.h
Nexus-Core/src/chelper/parameter_hint/: ParameterHint.cpp  ParameterHint.h
Nexus-Core/src/chelper/parser/: ASTNode.cpp  ASTNode.h  ErrorReason.cpp  ErrorReason.h  Parser.cpp  Parser.h  TokensView.cpp  TokensView.h
Nexus-Core/src/chelper/resources/: CPack.cpp  CPack.h  Manifest.h
Nexus-Core/src/chelper/resources/id/: BlockId.cpp  BlockId.h  ItemId.cpp  ItemId.h  NamespaceId.cpp  NamespaceId.h  NormalId.cpp  NormalId.h
Nexus-Core/src/chelper/serialization/: Serialization.h
Nexus-Core/src/chelper/syntax_highlight/: SyntaxHighlight.cpp  SyntaxHighlight.h  SyntaxResult.cpp  SyntaxResult.h
Nexus-Core/src/chelper/util/: JsonUtil.cpp  JsonUtil.h  KMPMatcher.cpp  KMPMatcher.h  Profile.cpp  Profile.h
Nexus-Core/tests/: BinaryUtilTest.cpp  ColorStringTest.cpp  KMPMatcherTest.cpp  MainTest.cpp  Old2NewTest.cpp  parser_test.cpp  tokenizer_test.cpp
changelog/: index.html
commands/: index.html
development/: index.html
docs/: commands.md  development.md  features.md  getting-started.md  index.md
features/: index.html
getting-started/: index.html
search/: search_index.json
web/: index.html
wiki/: Addon-System.md  Android-App.md  Architecture.md  Command-Data-Format.md  Contributing.md  Core-Modules.md  FAQ.md  Getting-Started.md  Home.md  Performance.md  Theme-System.md  _Sidebar.md  主题设置.md  命令参考.md  常见问题.md  悬浮窗使用.md  更新日志.md  贡献指南.md  资源库.md
(+56 files in other folders)
